...
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wuh-5a-8CT">
                                    <rect key="frame" x="258" y="308" width="84" height="30"/>
                                    <constraints>
                                        <constraint firstAttribute="width" constant="84" id="3Fn-qi-lmI"/>
                                        <constraint firstAttribute="height" constant="30" id="cI2-3S-LFB"/>
                                    </constraints>
                                    <state key="normal" title="Editar foto">
                                        <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                    </state>
                                    <connections>
                                        <action selector="takePicture:" destination="E04-Be-AGV" eventType="touchUpInside" id="U31-1U-ppz"/>
                                    </connections>
                                </button>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="E04-Be-AGV" id="JGL-Tp-Drd"/>
                            <outlet property="delegate" destination="E04-Be-AGV" id="uyJ-Sg-w9q"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Perfil" id="uGo-RS-7uJ">
                        <barButtonItem key="leftBarButtonItem" systemItem="edit" id="4uW-mi-0lL">
                            <connections>
                                <action selector="dataEdit:" destination="E04-Be-AGV" id="2Du-Yc-qQ2"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" image="info" id="pxs-fg-T33">
                            <connections>
                                <action selector="infoApp:" destination="E04-Be-AGV" id="Jk6-qj-41F"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                                        <rect key="frame" x="0.0" y="473" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eNL-xX-K2T" id="Wbv-wg-ZJz">
                                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Marcar consulta" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ewa-lh-ap4">
                                                    <rect key="frame" x="15" y="8" width="165" height="28"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="28" id="62a-I4-lwO"/>
                                                        <constraint firstAttribute="width" constant="165" id="cjN-7j-anK"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
                                        <rect key="frame" x="0.0" y="517" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qbY-Uf-gng" id="RwP-Zp-ACj">
                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Cancelar" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="idj-78-8fl">
                                                    <rect key="frame" x="15" y="0.0" width="570" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                    <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
            <point key="canvasLocation" x="1206" y="257"/>
        </scene>
        <!--Dados de dor-->
        <scene sceneID="W73-YH-HaT">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VTa-fc-DFo" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Dados de dor" image="line_chart_filled" id="dEZ-k6-izR"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="MuU-Fo-DYQ">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="53" id="11q-ge-zmg"/>
                                    <constraint firstAttribute="width" constant="130" id="LyG-bm-cOw"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Comece">
                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="dismiss:" destination="hHE-er-ACW" eventType="touchUpInside" id="kgc-D7-y5D"/>
                                </connections>
                            </button>
...
