...

    var steps = [ORKStep]()

    // MARK: - Instructions

    let instructionStep = ORKInstructionStep(identifier: "IntroStep")
    instructionStep.title = "Inventário breve de dor"
    instructionStep.text = "Preencha os dados seguintes relativos à intensidade"
    instructionStep.optional = false
    steps.append(instructionStep)

    // MARK: - If the user is feeling pain

    let scaleAnswerFormat = ORKAnswerFormat.continuousScaleAnswerFormatWithMaximumValue(10, minimumValue: 0, defaultValue: 0, maximumFractionDigits: 0, vertical: false, maximumValueDescription: "", minimumValueDescription: "")

    let questQuestionStepTitle = "Durante a vida, a maioria das pessoas apresenta dor de vez em quando (dor de cabeça, dor de dente, etc). Você teve uma dor diferente dessas?"
    let textChoices = [
        ORKTextChoice(text: "Não", value: 0),
        ORKTextChoice(text: "Sim", value: 1)
    ]
    let questAnswerFormat: ORKTextChoiceAnswerFormat = ORKAnswerFormat.choiceAnswerFormatWithStyle(.SingleChoice, textChoices: textChoices)
    let questQuestionStep = ORKQuestionStep(identifier: "Teve dor diferente hoje?", title: questQuestionStepTitle, answer: questAnswerFormat)
    questQuestionStep.optional = false
    steps.append(questQuestionStep)

...
