//
//  ControlaDorUITests.swift
//  ControlaDorUITests
//
//  Created by Isaías Lima on 24/03/16.
//  Copyright © 2016 PainController. All rights reserved.
//

import XCTest

class ControlaDorUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.

        let app = XCUIApplication()
        setupSnapshot(app)
        app.launch()
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.

        
        let app = XCUIApplication()
        app.navigationBars["Perfil"].buttons["info"].tap()
        
        let element = app.childrenMatchingType(.Window).elementBoundByIndex(0).childrenMatchingType(.Other).element.childrenMatchingType(.Other).element
        element.tap()
        element.tap()
        element.tap()
        app.buttons["Comece"].tap()
        app.tables.containingType(.Button, identifier:"Editar foto").element.tap()
        snapshot("Root View")
        
        let tablesQuery2 = app.tables
        tablesQuery2.cells.containingType(.StaticText, identifier:"Inventário breve de dor").childrenMatchingType(.StaticText).matchingIdentifier("Inventário breve de dor").elementBoundByIndex(0).tap()
        app.scrollViews.otherElements.buttons["Get Started"].tap()
        snapshot("BPI")
        
        let tablesQuery = tablesQuery2
        tablesQuery.staticTexts["Sim"].tap()
        snapshot("BPI - instructions")
        app.navigationBars["Step 3 of 18"].buttons["Cancel"].tap()
        
        let discardResultsButton = app.sheets.collectionViews.buttons["Discard Results"]
        discardResultsButton.tap()
        discardResultsButton.tap()
        tablesQuery.staticTexts["Marcar consulta"].tap()
        snapshot("Schedule")
        tablesQuery.staticTexts["Cancelar"].tap()
        app.tabBars.buttons["Dados de dor"].tap()

    }
    
}
